--- a/views/home.ejs
+++ b/views/home.ejs
@@ -43,35 +43,45 @@
         <!-- page 2 -->
         <div id="p2" class="paper">
             <div class="front">
-                <% for (let i = 0; i <= paragraphs.length; i++) { %>
                 <div id="f2" class="front-content">
-                    <p><%= paragraphs[i] %> </p>
-                </div>
-                <% } %>
-                <div class="back">
-                    <div id="b2" class="back-content">
+                    <% for(let i = 0; i <= paragraphs.length; i++) { %>
 
-                    </div>
+                    <% if(!paragraphs[i]) { %>
+                    <br>
+                    <br>
+                    <% } else {%>
+
+                    <p>
+                        <%= paragraphs[i] %>
+                    </p>
+                    <% } %>
                 </div>
             </div>
-            <!-- page 3 -->
-            <div id="p3" class="paper">
-                <div class="front">
-                    <div id="f3" class="front-content">
-                        <h1>Front 3</h1>
-                    </div>
-                </div>
-                <div class="back">
-                    <div id="b3" class="back-content">
-                        <h1>back 3</h1>
-                    </div>
+            <div class="back">
+                <div id="b2" class="back-content">
+                    <h1>back 2</h1>
                 </div>
             </div>
         </div>
+        <!-- page 3 -->
+        <div id="p3" class="paper">
+            <div class="front">
+                <div id="f3" class="front-content">
+                    <h1>Front 3</h1>
+                </div>
+            </div>
+            <div class="back">
+                <div id="b3" class="back-content">
+                    <h1>back 3</h1>
+                </div>
+            </div>
+        </div>
+    </div>
 
-        <button id="next-btn">
-            <i class="fa-solid fa-arrow-right"></i>
-        </button>
+
+    <button id="next-btn">
+        <i class="fa-solid fa-arrow-right"></i>
+    </button>
 </body>
 
 </html>
